# AirSim

./: .gitignore
AirLib/include/api/: .RpcLibClientBase.hpp.swp  RpcLibServerBase.hpp
AirLib/include/common/: AirSimSettings.hpp  ImageCaptureBase.hpp
AirLib/include/sensors/imu/: .ImuBase.hpp.swp  .ImuSimple.hpp.swp  .ImuSimpleParams.hpp.swp  ImuBase.hpp  ImuSimple.hpp
AirLib/src/api/: .RpcLibClientBase.cpp.swp  RpcLibClientBase.cpp
DroneTrajectoryGenerator/: CMakeLists.txt  drone_with_rgbd.json  make.sh
DroneTrajectoryGenerator/src/: main.cpp  random_trajectory_generator.h  recorder.h  utils.h
ros/: catkin_build.sh
ros/src/airsim_ros_pkgs/: .CMakeLists.txt.swp  CMakeLists.txt
ros/src/airsim_ros_pkgs/include/: .airsim_ros_wrapper.h.swp  airsim_ros_wrapper.h  random_trajectory_generator.h
ros/src/airsim_ros_pkgs/launch/: airsim_node.launch  airsim_with_simple_PD_position_controller.launch  dynamic_constraints.launch  position_controller_simple.launch  random_trajectory_generator.launch
ros/src/airsim_ros_pkgs/msg/: .ImuWithGt.msg.swp  ImuWithGt.msg
ros/src/airsim_ros_pkgs/rviz/: default.rviz
ros/src/airsim_ros_pkgs/src/: .airsim_ros_wrapper.cpp.swp  airsim_ros_wrapper.cpp  pd_position_controller_simple.cpp  random_trajectory_generator.cpp
ros/src/airsim_tutorial_pkgs/settings/: drone_with_imu_stereo_and_depth.json  two_drones_camera_lidar_imu.json
